fix image banner on mobile

--- a/public/css/apply.css
+++ b/public/css/apply.css
@@ -1,5 +1,10 @@
 .image-banner-1 {
     background-image: url(../img/friends.jpg);
-    background-size: contain;
     background-position-y: 25px;
+}
+
+@media only screen and (min-width: 1000px) {
+  .image-banner-1 {
+      background-size: contain;
+  }
 }
