--- a/public/css/programs.css
+++ b/public/css/programs.css
@@ -1,6 +1,10 @@
 .image-banner-1 {
       background-image: url(../img/un-2.jpg);
-      background-size: contain;
+}
+@media only screen and (min-width: 1000px) {
+  .image-banner-1 {
+        background-size: contain;
+  }
 }
 
 
